2014-03-23  Andy Buckley  <andy.buckley@cern.ch>

	* Moving new uncertainty functions into a new PDFSet.cc file to keep header clean.

	* Removing now unnecessary cmake check from configure and the docs.

2014-03-19  Andy Buckley  <andy.buckley@cern.ch>

	* Convert lhapdf-yaml-cpp building to use libtool, avoiding
	linking portability issues. Re-enable static library building
	since the necessary symbols now seem to be present (and the
	libtool warning has also disappeared).

2014-03-16  Andy Buckley  <andy.buckley@cern.ch>

	* Disable static library build for now, until we can figure out
	how to portably pull symbols from yaml-cpp into both shared and
	static libs via libtool.

2014-03-15  Andy Buckley  <andy.buckley@cern.ch>

	* Adding more compatibility functions: getDescription, getLam4,5,
	and getOrderPDF functions in old C++ wrapper.

2014-03-15  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Adding new example programs testpdfunc and hessian2replicas,
	functions for PDF uncertainties in PDFSet.h, and backwards
	compatibility functions (+ getnset_, getnmem_) in LHAGlue.cc.

2014-03-13  Andy Buckley  <andy.buckley@cern.ch>

	*  Adding implementations of getnf_, setpdfpath_ and placeholder
	getnset_, getnmem_ LHAGLUE functions.

2014-03-07  Andy Buckley  <andy.buckley@cern.ch>

	* Doc updates, and added script and current output to generate a
	PDF sets list Doxygen/HTML input from sets found on the developer
	system.

	* Add a third column to the pdfsets.index file for version
	comparison by the manager script.

2014-03-05  Andy Buckley  <andy.buckley@cern.ch>

	* Protect LHAGlue initialisation from unset Lambda values.

2014-02-12  Andy Buckley  <andy.buckley@cern.ch>

	* Adding mkindex script, to generate pdfsets.index automatically
	from metadata.

	* Adding lhapdfID (using SetIndex) to PDFSet and mapping it and
	dataversion into Python.

2014-01-29  Andy Buckley  <andy.buckley@cern.ch>

	* Adding the SetIndex and Parent metadata fields, and updating the